Added island card draggable feature and some styling

--- a/nook-ranking/src/components/PageWrapper/PageWrapper.css
+++ b/nook-ranking/src/components/PageWrapper/PageWrapper.css
@@ -1,4 +1,7 @@
 .page-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  border-radius: 100px;
+  background-color: #f5f2e9;
+  padding: 50px;
 }
