--- a/nook-ranking/src/components/VillagerRanker/VillagerRanker.css
+++ b/nook-ranking/src/components/VillagerRanker/VillagerRanker.css
@@ -1,4 +1,4 @@
-.page-wrapper {
+.villager-ranker {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   border-radius: 100px;
